# bbscript

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  scripts.py  test.json
bbscript/: __init__.py  commands.py  constants.py  errors.py  flags.py  meta.py  runtime.py
bbscript/stdlib/: __init__.py  conditions.py  convertions.py  debug.py  even_odd.py  math.py  utils.py  values.py
docs/: Makefile  bbscript.rst  conf.py  index.rst  make.bat  tests.rst
docs/_build/doctrees/: bbscript.doctree  bbscript.stdlib.doctree  cli.doctree  environment.pickle  index.doctree  modules.doctree  scripts.doctree  tests.doctree
docs/_build/html/: .buildinfo  bbscript.html  bbscript.stdlib.html  cli.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  scripts.html  search.html  searchindex.js  tests.html
docs/_build/html/_sources/: bbscript.stdlib.rst.txt  modules.rst.txt
tests/: condition_test.py  convert_test.py  math_test.py  runtime_test.py  variables_test.py
